@@ -1,72 +1,12 @@
 # TKXDPM.KSTN.20211-01
-# LAB03 - Detailed Design
+Hướng dẫn cài đặt phần mềm:
 
-## Task
-Hoàn thiện thiết kế chi tiết cho hệ thống EcoBike
-- Class Design:
- + Mô tả lớp
- + Biểu đồ lớp
-- Data modeling:
-## Contribution
-- Class Design:
-  + Đào Minh Dũng
-  + Lê Minh Tú
-- Data modeling: Nguyễn Tiến Mạnh
+Sau khi tải project về máy thì add tất cả các file jar trong thư mục lib vào classpath của project
+Tiếp tục add junit vào classpath
 
-# LAB02 - Interface Design
+Việc tiếp theo là add thông tin sau vào VM agrument: 
+--module-path="<đường dẫn tới thư mục chứa các file jar vủa JavaFX>" --add-modules=javafx.controls,javafx.fxml
 
-## Task
-Hoàn thiện thiết kế giao diện cho hệ thống EcoBike
-- Thiết kế Subsytem: Interbank, BarCode
-- Thiết kế giao diện đồ họa người dùng
-## Contribution
-- Thiết kế Subsystem:
-  + Interbank: Đào Minh Dũng
-  + BarCode: Lê Minh Tú
-- Sơ đồ chuyển màn hình: Nguyễn Tiến Mạnh
-- Thiết kế giao diện đồ họa người dùng:
-  + Splash Screen, Home Screen, ViewBikeScreen, View Station Screen: Đào Minh Dũng
-  + BarCodeScreen: Lê Minh Tú
-  + Return Bike Screen, Credit Card Screen, Transaction Screen: Nguyễn Tiến Mạnh
-## Revision
-Lê Minh Tú review
+Tiếp theo là thực thi các câu lệnh trong file script.sql để tạo các bảng cần thiết, sau đó insert thông tin vào table bike và dock.
 
-
-# LAB01 - ArchitechturalDesign
-## Task
-Hoàn thiện thiết kế kiến trúc cho các Usecase:
-- Xem xe
-- Thuê xe
-- Trả xe
-Mỗi usecase gồm biểu đồ lớp, biểu đồ chuỗi và biểu đồ giao tiếp
-
-## Contribution
-- Xem xe: Đào Minh Dũng
-- Thuê xe: Lê Minh Tú
-- Trả xe: Nguyễn Tiến Mạnh
-Biểu đồ lớp gộp: Lê Minh Tú
-
-## Revision
-
-# LAB00 - Requirement Analysis
-## Task
-- Hoàn thiện đặc tả use case cho các use case: 
-  + Xem xe trong bãi
-  + Thuê xe
-  + Trả xe
-
-- Xây dựng SRS
-
-## Contribution
-- Use case:
-  + Xem xe: Đào Minh Dũng
-  + Thuê xe: Lê Minh Tú
-  + Trả xe: Nguyễn Tiến Mạnh
-- SRS:
-  + 1. Giới thiệu: Đào Minh Dũng
-  + 2. Mô tả tổng quan: Nguyễn Tiến Mạnh 
-(biểu đồ use case: Lê Minh Tú, biểu đồ hoạt động: tương ứng với use case đã phân)
-  + 3. Đặc tả use case: theo phân công ở trên
-  + 4. Yêu cầu khác: Lê Minh Tú
-
-## Revision
+Đến đây là có thể run hàm Main trong package presentation để chạy chương trình.
